--- a/projects/to_do_app/style.css
+++ b/projects/to_do_app/style.css
@@ -2,7 +2,7 @@
    text-decoration: line-through;
 }
 body {
-   font-family: "DejaVu Sans Mono", monospace;
+   font-family: Courier;
    margin: 0;
    padding: 0;
    background: #efefef;
