--- a/projects/to_do_app/style.css
+++ b/projects/to_do_app/style.css
@@ -1,62 +1,134 @@
-.strikethrough {
-   text-decoration: line-through;
-}
-body {
-   font-family: Courier;
-   margin: 0;
-   padding: 0;
-   background: #efefef;
-}
-main {
-   margin: 0% 15%;
-}
-#filterTasks {
-   display: flex;
-   gap: 1rem;
-}
-input[type="radio"] {
-  display: none;
-}
-input[type="radio"] + label {
-  color: oklch(50% 0.02 270);
-}
+@layer rest {
+   *,
+   *::before,
+   *::after {
+     box-sizing: border-box;
+   }
 
-input[type="radio"] + label:hover {
-  color: oklch(30% 0.04 270);
-}
+   /* https://kilianvalkhof.com/2022/css-html/your-css-reset-needs-text-size-adjust-probably/ */
+   html {
+     -moz-text-size-adjust: none;
+     -webkit-text-size-adjust: none;
+     text-size-adjust: none;
+   }
 
-input[type="radio"]:checked + label {
-  color: oklch(20% 0.03 270);
-}
+   * {
+     margin: 0;
+   }
 
+   /* https://www.scottohara.me/blog/2019/01/12/lists-and-safari.html */
+   [role="list"] {
+     list-style: none;
+     margin: 0;
+     padding: 0;
+   }
 
-hr {
-   margin-top: 0;
-}
-nav ul li {
-  list-style: none;
-  display: block;
-  flex-grow: 1;
-  text-align: center;
-  padding: 1.5% 2.5%;
-}
-nav ul li:hover {
-  background: oklch(48.8% 0.243 264.376);
-}
-header {
-  background: oklch(54.6% 0.245 262.881);
-}
+   body {
+     min-block-size: 100vh;
+     line-height: 1.6;
+   }
 
-nav ul {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 0 1rem;
-}
+   h1,
+   h2,
+   h3,
+   button,
+   input,
+   label {
+     line-height: 1.1;
+   }
 
-nav ul li a {
-  text-decoration: none;
-  display: block;
-  color: white;
-}
+   h1,
+   h2,
+   h3,
+   h4 {
+     text-wrap: balance;
+   }
 
+   p,
+   li {
+     text-wrap: pretty;
+   }
+
+   img,
+   picture {
+     max-inline-size: 100%;
+     display: block;
+   }
+
+   input,
+   button,
+   textarea,
+   select {
+     font: inherit;
+   }
+}
+@layer base{
+   :root {
+
+   }
+   body {
+      font-family: Courier;
+      margin: 0;
+      padding: 0;
+      background: #efefef;
+   }
+   main {
+      margin: 0% 15%;
+   }
+
+   /* nav bar */
+   nav ul li {
+     list-style: none;
+     display: block;
+     flex-grow: 1;
+     text-align: center;
+     padding: 1.5% 2.5%;
+   }
+   nav ul li:hover {
+     background: oklch(48.8% 0.243 264.376);
+   }
+   header {
+     background: oklch(54.6% 0.245 262.881);
+   }
+
+   nav ul {
+     display: flex;
+     justify-content: space-evenly;
+     align-items: center;
+     padding: 0 1rem;
+   }
+
+   nav ul li a {
+     text-decoration: none;
+     display: block;
+     color: white;
+   }
+
+   /* the filter of the tasks */
+   #filterTasks {
+      display: flex;
+      gap: 1rem;
+   }
+   input[type="radio"] {
+     display: none;
+   }
+   input[type="radio"] + label {
+     color: oklch(50% 0.02 270);
+   }
+
+   input[type="radio"] + label:hover {
+     color: oklch(30% 0.04 270);
+   }
+
+   input[type="radio"]:checked + label {
+     color: oklch(20% 0.03 270);
+   }
+   hr {
+      margin-top: 0;
+   }
+
+   /* tasks */
+   .strikethrough {
+      text-decoration: line-through;
+   }
+}
