--- a/projects/to_do_app/style.css
+++ b/projects/to_do_app/style.css
@@ -1,31 +1,32 @@
 @layer rest {
+
    *,
    *::before,
    *::after {
-     box-sizing: border-box;
+      box-sizing: border-box;
    }
 
    /* https://kilianvalkhof.com/2022/css-html/your-css-reset-needs-text-size-adjust-probably/ */
    html {
-     -moz-text-size-adjust: none;
-     -webkit-text-size-adjust: none;
-     text-size-adjust: none;
+      -moz-text-size-adjust: none;
+      -webkit-text-size-adjust: none;
+      text-size-adjust: none;
    }
 
    * {
-     margin: 0;
+      margin: 0;
    }
 
    /* https://www.scottohara.me/blog/2019/01/12/lists-and-safari.html */
    [role="list"] {
-     list-style: none;
-     margin: 0;
-     padding: 0;
+      list-style: none;
+      margin: 0;
+      padding: 0;
    }
 
    body {
-     min-block-size: 100vh;
-     line-height: 1.6;
+      min-block-size: 100vh;
+      line-height: 1.6;
    }
 
    h1,
@@ -34,38 +35,40 @@
    button,
    input,
    label {
-     line-height: 1.1;
+      line-height: 1.1;
    }
 
    h1,
    h2,
    h3,
    h4 {
-     text-wrap: balance;
+      text-wrap: balance;
    }
 
    p,
    li {
-     text-wrap: pretty;
+      text-wrap: pretty;
    }
 
    img,
    picture {
-     max-inline-size: 100%;
-     display: block;
+      max-inline-size: 100%;
+      display: block;
    }
 
    input,
    button,
    textarea,
    select {
-     font: inherit;
+      font: inherit;
    }
 }
-@layer base{
+
+@layer base {
    :root {
       --clr-blue-500: oklch(54.6% 0.245 262.881);
       --clr-blue-700: oklch(48.8% 0.243 264.376);
+      --clr-white-400: #efefef;
       --clr-white-500: #efefef;
       --clr-white-600: #DEEFE7;
       --clr-white-900: #B4BEC9;
@@ -76,125 +79,177 @@
       --clr-red-500: #F73F52;
       --clr-red-800: #88304E;
 
-      --blue: var( --clr-blue-500 );
-      --blue-hover: var( --clr-blue-700 );
+      --blue: var(--clr-blue-500);
+      --blue-hover: var(--clr-blue-700);
 
-      --red-light: var( --clr-red-400 );
-      --red-base: var( --clr-red-400 );
-      --red-dark: var( --clr-red-800 );
+      --red-light: var(--clr-red-400);
+      --red-base: var(--clr-red-500);
+      --red-dark: var(--clr-red-800);
 
-      --gray-light: var( --clr-gray-300 );
-      --gray-base: var( --clr-gray-400 );
+      --gray-light: var(--clr-gray-300);
+      --gray-base: var(--clr-gray-400);
       --gray-dark: var(--clr-gray-600);
 
-      --bg-white: var(--clr-white-500);
+      --bg-white-light: white;
+      --bg-white-base: var(--clr-white-500);
    }
+
    body {
       font-family: Courier;
-      background: var(--bg-white);
+      background: var(--bg-white-base);
    }
-   .wrapper {
-     padding-inline: calc(1rem + (2vw));
-     max-width: 1400px;
-     margin-inline: auto;
-      @media (max-width: 768px){
-          padding-inline: 0.5; 
-          max-width: none;
+}
+
+@layer components {
+   header {
+      background: var(--blue);
+
+      nav ul {
+         display: flex;
+         justify-content: space-evenly;
+         align-items: center;
+         padding: 0 1rem;
+
+         li {
+            list-style: none;
+            display: block;
+            flex-grow: 1;
+            text-align: center;
+            padding: 1.5% 2.5%;
+
+            &:hover {
+               background: var(--blue-hover);
+            }
+
+            a {
+               text-decoration: none;
+               display: block;
+               color: var(--bg-white-light);
+            }
+         }
       }
    }
 
 
-   /* nav bar */
-   nav ul li {
-     list-style: none;
-     display: block;
-     flex-grow: 1;
-     text-align: center;
-     padding: 1.5% 2.5%;
-   }
-   nav ul li:hover {
-     background: var(--blue-hover);
-   }
-   header {
-     background: var(--blue);
-   }
-
-   nav ul {
-     display: flex;
-     justify-content: space-evenly;
-     align-items: center;
-     padding: 0 1rem;
-   }
-
-   nav ul li a {
-     text-decoration: none;
-     display: block;
-     color: var(--bg-white);
-   }
-
-   /* the filter of the tasks */
    #filterTasks {
-      display: flex;
-      gap: 1rem;
-   }
-   input[type="radio"] {
-     display: none;
-   }
-   input[type="radio"] + label {
-     color: var(--gray-light);
+      input {
+         display: none;
+
+         &+label {
+            color: var(--gray-light);
+
+            &:hover {
+               color: var(--gray-base);
+            }
+         }
+
+         &:checked+label {
+            color: var(--gray-dark);
+         }
+      }
    }
 
-   input[type="radio"] + label:hover {
-     color: var(--gray-base);
+   .task {
+      background: var(--bg-white-light);
+      border-radius: 7.5px;
+      height: 2.25rem;
+
+      input {
+         appearance: none;
+         width: 20px;
+         height: 20px;
+         border: 2px solid #ccc;
+         border-radius: 50%;
+         outline: none;
+         cursor: pointer;
+
+         &:checked {
+            background-color: #007bff;
+            border-color: #007bff;
+
+            &::before {
+               content: '\2713';
+               display: block;
+               text-align: center;
+               color: white;
+               line-height: 21px;
+            }
+         }
+      }
    }
 
-   input[type="radio"]:checked + label {
-     color: var(--gray-dark);
-   }
-   hr {
-      margin-top: 0;
-   }
 
-   /* tasks */
    .strikethrough {
       text-decoration: line-through;
+      color: var(--gray-light);
    }
 }
+
+@layer layout {
+   .wrapper {
+      padding-inline: calc(1rem + (2vw));
+      max-width: 1400px;
+      margin-inline: auto;
+
+      @media (max-width: 768px) {
+         padding-inline: 0.5;
+         max-width: none;
+      }
+   }
+
+   .equal-colmun-spacing {
+      display: grid;
+      gap: .5rem;
+   }
+
+   .equal-row-spacing {
+      display: flex;
+      gap: var(--row-spacing, 1rem);
+   }
+}
+
 @layer utility {
    .section {
       margin-block: 1rem;
 
-      &[data-width="narrow"]{
+      &[data-width="narrow"] {
          margin-block: .5rem;
       }
    }
-    
+
    .blue-button {
       background: var(--blue);
-      color: var(--bg-white);
+      color: var(--bg-white-light);
       border-radius: 5px;
       border: none;
       display: inline-flex;
       padding: 5px;
+
       &:hover {
          background: var(--blue-hover);
       }
    }
+
    .red-button {
       background: var(--red-light);
-      color: var(--bg-white);
+      color: var(--bg-white-light);
       border-radius: 5px;
       border: none;
       display: inline-flex;
       padding: 5px;
+
       &:hover {
          background: var(--red-base);
       }
-      &[shade="dark"]{
+
+      &[shade="dark"] {
          background: var(--red-base);
+
          &:hover {
             background: var(--red-dark);
          }
       }
    }
+
+
 }
